examples/failing/MissingClassExport.purs
module Test (bar) where

  class Foo a where
    bar :: a -> a
